Fixed overflow issue

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,7 +19,8 @@ body {
 .jumbotron {
     margin: 0;
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     overflow: hidden;
     background: var(--eerie-black);
 }
